<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/action_rate_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_rate_text" />

        <Button
            android:id="@+id/action_share_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_share_app_text" />

        <Button
            android:id="@+id/action_email_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_app_to_friends_text" />

        <Button
            android:id="@+id/action_suggestion_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_about_app_text" />

        <Button
            android:id="@+id/privacy_policy_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy" />
    </LinearLayout>
</RelativeLayout>