<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/dialogHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/feature_dialog_title"
        android:textColor="#ff00afef"
        android:textSize="18.0sp"
        android:typeface="serif" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@+id/dialogHeader"
        android:background="#ff00afef" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="80.0dip"
        android:layout_height="80.0dip"
        android:layout_below="@+id/line"
        android:layout_marginTop="8.0dip" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginBottom="15.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_toRightOf="@+id/img"
        android:text="@string/feature_dialog_message"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="10.0dip">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/feature_dialog_yes_button_text" />

        <Button
            android:id="@+id/btnimgDelete"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.0dip"
            android:layout_weight="0.5"
            android:text="@string/feature_dialog_no_button_text" />
    </LinearLayout>
</RelativeLayout>